lean-ray-server/quickcheck/Test/DeriveArbitrary/StructureTest.lean
import Quickcheck.Arbitrary
import Quickcheck.DeriveArbitrary
import Quickcheck.Attr
import Quickcheck.Testable

open Quickcheck Gen

set_option guard_msgs.diff true

/-!

To test whether the derived generator can handle `structure`s with named fields,
we define a dummy `structure`:

```lean
structure Foo where
  stringField : String
  boolField : Bool
  natField : Nat
```

To test whether the derived generator finds counterexamples,
we create a faulty property:

```lean
‚ąÄ foo : Foo, foo.stringField.isEmpty || !foo.boolField || foo.natField == 0)
```

The derived generator should be able to generate inhabitants of `Foo`
where `stringField` is non-empty, where `boolField` is false
and `natField` is non-zero.

-/

/-- Dummy `structure` with named fields -/
structure Foo where
  stringField : String
  boolField : Bool
  natField : Nat
  deriving Repr

-- Test that we can successfully synthesize instances of `Arbitrary` & `ArbitraryFueled`
set_option trace.quickcheck.deriving.arbitrary true in
/--
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitraryFoo‚úĚ : Nat ‚Üí Quickcheck.Gen (@Foo‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@Foo‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero =>
             Quickcheck.Gen.oneOfWithDefault
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return Foo.mk a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)
               [(do
                   let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                   let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                   let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return Foo.mk a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return Foo.mk a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)
               [(1,
                   (do
                     let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return Foo.mk a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)),
                 ]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance : Quickcheck.ArbitraryFueled‚úĚ (@Foo‚úĚ) :=
       ‚ü®arbitraryFoo‚úĚ‚ü©]
-/
#guard_msgs in
deriving instance Arbitrary for Foo

/-- info: instArbitraryFueledFoo -/
#guard_msgs in
#synth ArbitraryFueled Foo

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary Foo

/-- `Shrinkable` instance for `Foo`, which shrinks each of its constituent fields -/
instance : Shrinkable Foo where
  shrink (foo : Foo) :=
    let strings := Shrinkable.shrink foo.stringField
    let bools := Shrinkable.shrink foo.boolField
    let nats := Shrinkable.shrink foo.natField
    let zippedFields := List.zip (List.zip strings bools) nats
    (fun ((s, b), n) => Foo.mk s b n) <$> zippedFields

/-- `SampleableExt` instance for `Tree` -/
instance : SampleableExt Foo :=
  SampleableExt.mkSelfContained Arbitrary.arbitrary

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ foo : Foo, foo.stringField.isEmpty || !foo.boolField || foo.natField == 0)
  (cfg := {numInst := 100, maxSize := 5, quiet := true})
